--- a/templates/layout/default.html.twig
+++ b/templates/layout/default.html.twig
@@ -21,8 +21,7 @@
             <a class="py-2" href="{{ path('home') }}">
                 <h2>Eco-system</h2>
             </a>
-            <a class="py-2 d-none d-md-inline-block" href="{{ path('about') }}">About</a>
-            <a class="py-2 d-none d-md-inline-block" href="{{ path('result') }}">Result</a>
+            <a class="py-2 d-none d-md-inline-block" href="{{ path('game') }}">Games</a>
         </div>
     </nav>
 </header>
